--- a/index.html
+++ b/index.html
@@ -6,15 +6,37 @@
     </head>
 
     <body>
-        <nav id="nav">
-            <a class="nav-link" href=#>Gmail</a>
-            <a class="nav-link other-children" href=#>Images</a>
-            <a class="nav-link other-children" href=#>Google Apps</a>
-        </nav>
-        <main id="main">
+        <div id="top-container">
+            <nav>
+                <a class="nav-link" href=#>Gmail</a>
+                <a class="nav-link other-children" href=#>Images</a>
+                <a class="nav-link other-children" href=#>Google Apps</a>
+            </nav>
+        </div>
+
+        <main>
             <img id="logo" src="https://assets.stickpng.com/images/580b57fcd9996e24bc43c51f.png"
              alt="Google Logo">
+
             <textarea id="searchbar"></textarea>
+
+            <div id="buttons">
+                <a class="button" href=#>Google Search</a>
+                <a class="button" href="https://www.google.com/doodles" target="_blank">I'm Feeling Lucky</a>
+            </div>
+
+            <div id="language-options">
+                Google offered in:
+                <a class="language" href=#>Indonesia</a>
+                <a class="language" href=#>Basa Bali</a>
+            </div>
         </main>
     </body>
+
+    <footer>
+        TES
+        <div id="user-location">
+            Indonesia
+        </div>
+    </footer>
 </html>
