Added all necessary links, formatted the footer and polished other elements.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <body>
         <div id="top-container">
             <nav>
-                <a class="nav-link" href=#>Gmail</a>
-                <a class="nav-link other-children" href=#>Images</a>
-                <a class="nav-link other-children" href=#>Google Apps</a>
+                <a class="nav-link" href="http://mail.google.com">Gmail</a>
+                <a class="nav-link other-children" href="https://www.google.com/imghp?hl=en">Images</a>
+                <a class="other-children" href=#><img id="google-apps" src="https://lh5.googleusercontent.com/FnhsbLzvZuHbMsqpQTjVErIdzFcmRMNPPU2nzJ9FmZA6OW8lnD0cBQTet1EiSi7mKt4TCh9BezgypgI3dspRulyHAGXDlpXcDFxvaW1DtIq1CyAzrqCOrQ5I7qFt4RfeBsvJXj9u"></a>
+                <a id="sign-in-btn" class="other-children btn-link" href="https://accounts.google.com"><b>Sign in</b></a>
             </nav>
         </div>
 
@@ -21,8 +22,8 @@
             <textarea id="searchbar"></textarea>
 
             <div id="buttons">
-                <a class="button" href=#>Google Search</a>
-                <a class="button" href="https://www.google.com/doodles" target="_blank">I'm Feeling Lucky</a>
+                <a class="button btn-link" href=#>Google Search</a>
+                <a class="button btn-link" href="https://www.google.com/doodles" target="_blank">I'm Feeling Lucky</a>
             </div>
 
             <div id="language-options">
@@ -34,9 +35,21 @@
     </body>
 
     <footer>
-        TES
-        <div id="user-location">
+        <div id="footer-top">
             Indonesia
+        </div>
+        <div id="footer-bottom">
+            <div id="bottom-1">
+                <a href="https://policies.google.com/privacy" class="ftr-link">Privacy</a>
+                <a href="https://policies.google.com/terms" class="other-children ftr-link">Terms</a>
+                <a href="https://www.google.com/preferences" class="other-children ftr-link">Settings</a>
+            </div>
+            <div id="bottom-2">
+                <a href="https://ads.google.com/intl/en_ID/home/" class="ftr-link">Advertising</a>
+                <a href="https://www.google.com/intl/en_en/business/" class="other-children ftr-link">Business</a>
+                <a href="https://about.google" class="other-children ftr-link">About</a>
+                <a href="https://www.google.com/search/howsearchworks/" class="other-children ftr-link">How Search works</a>
+            </div>
         </div>
     </footer>
 </html>
