--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div id="top-container">
             <nav>
                 <a class="nav-link" href="http://mail.google.com">Gmail</a>
-                <a class="nav-link other-children" href="https://www.google.com/imghp?hl=en">Images</a>
-                <a class="other-children" href=#><img id="google-apps" src="https://lh5.googleusercontent.com/FnhsbLzvZuHbMsqpQTjVErIdzFcmRMNPPU2nzJ9FmZA6OW8lnD0cBQTet1EiSi7mKt4TCh9BezgypgI3dspRulyHAGXDlpXcDFxvaW1DtIq1CyAzrqCOrQ5I7qFt4RfeBsvJXj9u"></a>
-                <a id="sign-in-btn" class="other-children btn-link" href="https://accounts.google.com"><b>Sign in</b></a>
+                <a class="nav-link margin-left" href="https://www.google.com/imghp?hl=en">Images</a>
+                <a class="margin-left" href=#><img id="google-apps" src="https://lh5.googleusercontent.com/FnhsbLzvZuHbMsqpQTjVErIdzFcmRMNPPU2nzJ9FmZA6OW8lnD0cBQTet1EiSi7mKt4TCh9BezgypgI3dspRulyHAGXDlpXcDFxvaW1DtIq1CyAzrqCOrQ5I7qFt4RfeBsvJXj9u"></a>
+                <a id="sign-in-btn" class="margin-left btn-link" href="https://accounts.google.com"><b>Sign in</b></a>
             </nav>
         </div>
 
@@ -41,14 +41,14 @@
         <div id="footer-bottom">
             <div id="bottom-1">
                 <a href="https://policies.google.com/privacy" class="ftr-link">Privacy</a>
-                <a href="https://policies.google.com/terms" class="other-children ftr-link">Terms</a>
-                <a href="https://www.google.com/preferences" class="other-children ftr-link">Settings</a>
+                <a href="https://policies.google.com/terms" class="margin-left ftr-link">Terms</a>
+                <a href="https://www.google.com/preferences" class="margin-left ftr-link">Settings</a>
             </div>
             <div id="bottom-2">
                 <a href="https://ads.google.com/intl/en_ID/home/" class="ftr-link">Advertising</a>
-                <a href="https://www.google.com/intl/en_en/business/" class="other-children ftr-link">Business</a>
-                <a href="https://about.google" class="other-children ftr-link">About</a>
-                <a href="https://www.google.com/search/howsearchworks/" class="other-children ftr-link">How Search works</a>
+                <a href="https://www.google.com/intl/en_en/business/" class="margin-left ftr-link">Business</a>
+                <a href="https://about.google" class="margin-left ftr-link">About</a>
+                <a href="https://www.google.com/search/howsearchworks/" class="margin-left ftr-link">How Search works</a>
             </div>
         </div>
     </footer>
